# fortran-numeric

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api-doc-ford-settings.md  api-doc-index.md  fpm.toml
cmake/: numeric.cmake
config/: CMakeLists.txt  DefaultFlags.cmake  template.cmake
src/: CMakeLists.txt  common.fypp  integer.f90  nonNumber.f90  real.f90
src/integer/: countDigits.f90  integer.f90  integer.fy90  integer.fypp  isNegative.f90  isPositive.f90  parameter.f90  toString.f90
src/nonNumber/: hasNan.f90  isInf.f90  isNonNumber.f90  nonNumber.f90  nonNumber.fypp  parameter.f90
src/real/: countIntegerDigits.f90  parameter.f90  real.f90  real.fy90  real.fypp  toString.f90
src/tests/: CMakeLists.txt  check.f90
src/tests/integer/: test_integer.f90
test/: CMakeLists.txt
test/integer/: CMakeLists.txt  test_integer.f90
test/nonNumber/: CMakeLists.txt  test_nonNumber.f90
test/real/: CMakeLists.txt  test_real.f90
utils/check/: fpm.toml
